# atworkBridge

./: Dockerfile
atwork_bridge_msgs_ros1/: CMakeLists.txt
atwork_bridge_msgs_ros1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
atwork_bridge_msgs_ros1/install/atwork_commander_msgs/share/atwork_commander_msgs/: package.bash  package.zsh
atwork_bridge_msgs_ros2/: CMakeLists.txt  package.xml
atwork_bridge_msgs_ros2/msg/: Jog.msg  ObjectTask.msg  RefboxState.msg  SudoControl.msg
atwork_bridge_msgs_ros2/srv/: ArmBrain.srv  ArmControl.srv  GetInventoryState.srv  GetItemId.srv  GetItemInformation.srv  GetItemName.srv  GiveBrainList.srv  NavAlignment.srv  Navigation.srv  OrTools.srv  PickAndPlace.srv  PickItemInventory.srv  PlaceItemInventory.srv  PositionInCamera.srv  StartTargetBroadcast.srv  TaskOpt.srv
